# poc

./: .gitignore  README.md  pyproject.toml
samples/: dead.py  having.dt  having.py
src/deduct_ja/: common.py  rule.py
src/deduct_lang/: __main__.py  lexer.py
src/deduct_poc/: __init__.py  effect.py  entity.py  error.py  rule.py  state_machine.py
