[project]
name = "deduct-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deduct_poc"]

[tool.ruff.lint]
preview = true
select = [
    "F", # 未使用のimportを警告するルール
    "D", # ドキュメントを記載するルール
    "TID251", # Banned APIのルール
    "LOG" # loggingの使い方についてのルール
]
extend-select = ["RUF022"]
ignore = [
    # 実験目的なので詳細なドキュメントに関しては無視。
    "D102",
    "D105",
    "D107",
    # ドキュメントの最後をピリオドにするルール。このプロジェクトは日本語のため無視。
    "D400",
    "D415",
    # モジュールやパッケージのドキュメントは、ファイル名を見ればわかる場合があるので、無視。
    "D100",
    "D104",
    # ファイルのコピーライト表記は無視。
    "CPY"
]
fixable = ["ALL"]
pydocstyle = { convention = "google" }

[dependency-groups]
dev = [
    "mecab-python3>=1.0.10",
    "ruff>=0.7.3",
]
